--- a/config.toml
+++ b/config.toml
@@ -8,6 +8,9 @@ generate_feeds = true
 
 theme = "linkita"
 
+[link_checker]
+skip_prefixes = ["https://blog.8192000.xyz"]
+
 [markdown]
 highlight_code = true
 highlight_theme = "base16-ocean-dark"
@@ -24,6 +27,7 @@ mermaid = true
 comment = false
 header_menu_name = "main_menu"
 date_format = "%B %e, %Y"
+use_cdn = true
 
 [extra.footer]
 since = 2024
@@ -32,7 +36,7 @@ copyright = "&copy; $YEAR Hsü Ching | [CC BY-SA 4.0]($LICENSE_URL)"
 
 [extra.menus]
 main_menu = [
-  { url = "$BASE_URL/blog/", name = "Archive" },
+  { url = "$BASE_URL/archive/", name = "Archive" },
   { url = "$BASE_URL/categories/", name = "Categories" },
   { url = "$BASE_URL/tags/", name = "Tags" },
   { url = "$BASE_URL/about/", name = "About" },
